Fixed bug #36268 (Object destructors called even after fatal errors)