main/main.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: main.c,v 1.640.2.14 2006/01/16 09:09:37 dmitry Exp $ */
+/* $Id: main.c,v 1.640.2.15 2006/02/03 09:31:59 dmitry Exp $ */
 
 /* {{{ includes
  */
@@ -820,6 +820,7 @@ static void php_error_cb(int type, const char *error_filename, const uint error_
 				AG(memory_limit) = PG(memory_limit); 
 #endif
 				efree(buffer);
+				zend_objects_store_mark_destructed(&EG(objects_store) TSRMLS_CC);
 				zend_bailout();
 				return;
 			}
